--- a/platform/mv3/extension/_locales/de/messages.json
+++ b/platform/mv3/extension/_locales/de/messages.json
@@ -295,6 +295,30 @@
     "message": "Temporären Modus beenden",
     "description": "Tooltip for the button used to exit zapper mode"
   },
+  "developDropdownLabel": {
+    "message": "View:",
+    "description": "A label of a dropdown list"
+  },
+  "developOptionFilteringModeDetails": {
+    "message": "Filtering mode details",
+    "description": "An option in a dropdown list"
+  },
+  "developOptionCustomDnrRules": {
+    "message": "Custom DNR rules",
+    "description": "An option in a dropdown list"
+  },
+  "developOptionDnrRulesOf": {
+    "message": "DNR rules of …",
+    "description": "A section header in a dropdown list"
+  },
+  "developOptionDynamicRuleset": {
+    "message": "Dynamic ruleset",
+    "description": "An option in a dropdown list"
+  },
+  "developOptionSessionRuleset": {
+    "message": "Session ruleset",
+    "description": "An option in a dropdown list"
+  },
   "saveButton": {
     "message": "Speichern",
     "description": "Text for buttons used to save changes"
@@ -311,8 +335,8 @@
     "message": "Exportieren …",
     "description": "Text for buttons used to export content"
   },
-  "dnrRulesSummary": {
-    "message": "Eigene DNR-Regeln können unten eingetragen werden. <b>Verwenden Sie keine Regeln aus unseriösen Quellen.</b>",
+  "dnrRulesWarning": {
+    "message": "Do not add content from untrusted sources",
     "description": "Short description of the DNR rules editor pane"
   },
   "dnrRulesCountInfo": {
