--- a/platform/mv3/extension/_locales/fil/messages.json
+++ b/platform/mv3/extension/_locales/fil/messages.json
@@ -295,6 +295,30 @@
     "message": "Umalis sa element zapper mode",
     "description": "Tooltip for the button used to exit zapper mode"
   },
+  "developDropdownLabel": {
+    "message": "View:",
+    "description": "A label of a dropdown list"
+  },
+  "developOptionFilteringModeDetails": {
+    "message": "Filtering mode details",
+    "description": "An option in a dropdown list"
+  },
+  "developOptionCustomDnrRules": {
+    "message": "Custom DNR rules",
+    "description": "An option in a dropdown list"
+  },
+  "developOptionDnrRulesOf": {
+    "message": "DNR rules of …",
+    "description": "A section header in a dropdown list"
+  },
+  "developOptionDynamicRuleset": {
+    "message": "Dynamic ruleset",
+    "description": "An option in a dropdown list"
+  },
+  "developOptionSessionRuleset": {
+    "message": "Session ruleset",
+    "description": "An option in a dropdown list"
+  },
   "saveButton": {
     "message": "I-save",
     "description": "Text for buttons used to save changes"
@@ -311,8 +335,8 @@
     "message": "I-export...",
     "description": "Text for buttons used to export content"
   },
-  "dnrRulesSummary": {
-    "message": "Maglagay ng mga patakaran para sa DNR. <b>Huwag magdadagdag mula sa mga source na hindi mapagkakatiwalaan.</b>",
+  "dnrRulesWarning": {
+    "message": "Do not add content from untrusted sources",
     "description": "Short description of the DNR rules editor pane"
   },
   "dnrRulesCountInfo": {
